--- a/index.html
+++ b/index.html
@@ -8,44 +8,47 @@
     <meta name="author" content="Daniel Toledo">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
-    <header>
-        <img src="images/daniel.jpg" alt="Daniel Toledo" width="150" height="150">
-        <h1>Daniel Toledo Fuentes</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#chamber">Chamber</a></li>
-                <li><a href="#Final">Final</a></li>
-                <li><a href="#github">Github Profile</a></li>
-                <li><a href="#linkedin">LinkedIn</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <div class="header-top-content"> <img src="images/danieltoledo.png" alt="Daniel Toledo"> <h1>Daniel Toledo Fuentes</h1>
+    </div>
+    <button id="menu-button">☰</button> <nav>
+        <ul>
+            <li class="active"><a href="#home">Home</a></li> <li><a href="#chamber">Chamber</a></li>
+            <li><a href="#Final">Final</a></li>
+            <li><a href="#github">Github Profile</a></li>
+            <li><a href="#linkedin">LinkedIn</a></li>
+        </ul>
+    </nav>
+</header>
     <main>
-        <h2>Home</h2>
-        <section id="work">
-            <h2>Course Work</h2>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
-        </section>
-        <section id="city">
-            <h2>Rancagua, Chile</h2>
+        <h1>Home</h1>
+        <div class="content-columns">
+            <section id="work">
+                <h2>Course Work</h2>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </section>
+            <section id="city">
+                <h2>Rancagua, Chile</h2>
             <img src="images/city.jpg" alt="City" width="300" height="200">
             <p>Something from Rancagua</p>
         </section>
+        </div>
         <section id="courses">
             <nav>
+                <h2>Web and Computer Programming Certificate</h2>
                 <ul>
                     <li><a href="All">All</a></li>
                     <li><a href="CSE">CSE</a></li>
                     <li><a href="WDD">WDD</a></li>
+                </ul>
             </nav>
 
         </section>
