--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
     <script src="scripts/getdates.js" defer></script>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:url" content="en_US">
+    <meta property="og:image" content="">
+
 </head>
 <body>
 <header>
@@ -37,8 +43,8 @@
             </section>
             <section id="city">
                 <h2>Rancagua, Chile</h2>
-            <img src="images/city.jpg" alt="City" width="300" height="200">
-            <p>Something from Rancagua</p>
+            <img src="images/rancagua.jpg" alt="Plaza de los Heroes, Rancagua" width="300" height="200">
+            <p>"Plaza de los Heroes" in Rancagua</p>
         </section>
         </div>
         <section id="courses">
