--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
                 <button data-filter="CSE" class="filter-btn">CSE</button>
                 <button data-filter="WDD" class="filter-btn">WDD</button>
             </div>
+            <div class="total-credits-container">
+                <p>Total Créditos Mostrados: <span id="totalCreditsValue">0</span></p>
+            </div>
             <div id="coursesContainer" class="courses-grid">
                 </div>
         </section>
