--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     </footer>
 
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/course_data.js"></script> 
     <script src="scripts/main.js"></script>
 </body>
 </html>
