--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 
     <script src="scripts/getdates.js"></script>
     <script src="scripts/course_data.js"></script> 
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js"></script>             
+    <script src="scripts/course_logic.js"></script>
 </body>
 </html>
