--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>Daniel Toledo Fuentes - Portafolio</title>
     <meta name="description" content="Portafolio personal de Daniel Toledo Fuentes, mostrando proyectos y certificaciones en programación web y computación.">
     <meta name="author" content="Daniel Toledo Fuentes">
-
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" media="screen and (min-width: 768px)" href="styles/larger.css">
-
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -40,8 +37,11 @@
     </header>
 
     <main class="container">
-        <section class="home-section">
+        <section class="page-title-section">
             <h2>Home</h2>
+        </section>
+
+        <section class="home-content-cards-section">
             <div class="content-grid">
                 <article class="card course-work-card">
                     <h3>Course Work</h3>
@@ -84,7 +84,7 @@
 
     <script src="scripts/getdates.js"></script>
     <script src="scripts/course_data.js"></script> 
-    <script src="scripts/main.js"></script>             
+    <script src="scripts/main.js"></script>
     <script src="scripts/course_logic.js"></script>
 </body>
 </html>
