update rancagua image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </article>
                 <article class="card location-card">
                     <h3>Rancagua, Chile</h3>
-                    <img src="images/rancagua.jpg" alt="Plaza de los Héroes en Rancagua" id="locationImage" class="location-image">
+                    <img src="images/rancagua.webp" alt="Plaza de los Héroes en Rancagua" id="locationImage" class="location-image">
                     <p class="caption">"Plaza de los Héroes" en Rancagua</p>
                 </article>
             </div>
