--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timbuktu Chamber of Commerce</title>
+    <title>Rancagua Chamber of Commerce</title>
 
-    <meta property="og:title" content="Timbuktu Chamber of Commerce - Connecting Our Community" />
-    <meta property="og:description" content="Join the Timbuktu Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Timbuktu." />
-    <meta property="og:image" content="https://placehold.co/1200x630/764ba2/white?text=Timbuktu+Chamber" /> <meta property="og:url" content="https://www.yourtimbuktuccdomain.com" /> <meta property="og:type" content="website" />
+    <meta property="og:title" content="Rancagua Chamber of Commerce - Connecting Our Community" />
+    <meta property="og:description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
+    <meta property="og:image" content="https://placehold.co/1200x630/764ba2/white?text=Rancagua+Chamber" /> <meta property="og:url" content="https://www.yourrancaguaccdomain.com" /> <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -17,9 +17,9 @@
     <header class="site-header">
         <div class="container header-container">
             <div class="logo-title">
-                <img src="https://placehold.co/50x50/764ba2/white?text=Logo" alt="Timbuktu Chamber Logo" class="logo">
+                <img src="https://placehold.co/50x50/764ba2/white?text=Logo" alt="Rancagua Chamber Logo" class="logo">
                 <div>
-                    <h1 class="site-name">Timbuktu</h1>
+                    <h1 class="site-name">Rancagua</h1>
                     <p class="site-subtitle">Chamber of Commerce</p>
                 </div>
             </div>
@@ -166,7 +166,7 @@
         <div class="container footer-container-main">
             <div class="footer-grid">
                 <div class="footer-contact">
-                    <h5 class="footer-heading">Timbuktu Chamber of Commerce</h5>
+                    <h5 class="footer-heading">Rancagua Chamber of Commerce</h5>
                     <p>10 Rue De La Paix</p>
                     <p>Timbuktu, Mali 999</p>
                     <p class="footer-email">Email: <a href="mailto:info@timbuktucc.org">info@timbuktucc.org</a></p>
@@ -184,13 +184,13 @@
 
                 <div class="footer-project-info">
                     <p class="project-title">WDD231 Class Project</p>
-                    <p>Marie Martínez</p>
-                    <p class="copyright">&copy; <span id="currentYear"></span> Timbuktu Chamber of Commerce</p>
+                    <p>Daniel Toledo</p>
+                    <p class="copyright">&copy; <span id="currentYear"></span> Rancagua Chamber of Commerce</p>
                     <p>Last Modification: <span id="lastModified"></span></p>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>Designed with care for the Timbuktu community.</p>
+                <p>Designed with care for the Rancagua community.</p>
             </div>
         </div>
     </footer>
