--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="site-header">
         <div class="container header-content">
             <div class="profile-info">
-                <img src="images/danieltoledo.png" alt="Foto de Daniel Toledo Fuentes" id="profileImage" class="profile-image">
+                <img src="images/danieltoledo.webp" alt="Foto de Daniel Toledo Fuentes" id="profileImage" class="profile-image">
                 <h1>Daniel Toledo Fuentes</h1>
             </div>
             <button id="hamburgerButton" class="hamburger-button" aria-label="Abrir menú de navegación" aria-expanded="false" aria-controls="mainNav">
@@ -29,7 +29,7 @@
             <nav id="mainNav" class="main-nav">
                 <ul>
                     <li><a href="#" class="nav-item active-link">Home</a></li>
-                    <li><a href="#" class="nav-item">Chamber</a></li>
+                    <li><a href="chamber" class="nav-item">Chamber</a></li>
                     <li><a href="#" class="nav-item">Final</a></li>
                     <li><a href="#" class="nav-item">Github Profile</a></li>
                     <li><a href="#" class="nav-item">LinkedIn</a></li>
