Refactor chamber website: Update navigation links, enhance weather and event sections, and implement member directory with JSON data. Add responsive design adjustments and dark mode support.

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,8 +25,8 @@
             </div>
 
             <nav class="main-nav">
-                <a href="#">Home</a>
-                <a href="#">Directory</a>
+                <a href="index.html">Home</a>
+                <a href="directory.html">Directory</a>
                 <a href="#">Join</a>
                 <a href="#">Discover</a>
             </nav>
@@ -46,8 +46,8 @@
             </div>
         </div>
         <div id="mobileMenu" class="mobile-nav hidden">
-            <a href="#">Home</a>
-            <a href="#">Directory</a>
+            <a href="index.html">Home</a>
+            <a href="directory.html">Directory</a>
             <a href="#">Join</a>
             <a href="#">Discover</a>
         </div>
@@ -76,14 +76,7 @@
                         <h4 class="event-name">Community Meetup</h4>
                         <p class="event-details">Next Tuesday, 7:00 PM</p>
                     </div>
-                    <div class="event-item">
-                        <h4 class="event-name">Business Workshop</h4>
-                        <p class="event-details">Oct 15th, 9:00 AM - 4:00 PM</p>
-                    </div>
-                     <div class="event-item">
-                        <h4 class="event-name">Annual Gala</h4>
-                        <p class="event-details">Nov 5th, 6:00 PM</p>
-                    </div>
+
                 </div>
             </div>
 
@@ -91,35 +84,16 @@
                 <div class="card current-weather-card">
                     <h3 class="card-title">Current Weather</h3>
                     <div class="weather-main">
-                        <i data-lucide="cloud-sun" class="weather-icon"></i> <div>
-                            <p class="temperature">75°F</p>
-                            <p class="weather-description">Partly Cloudy</p>
-                        </div>
+
                     </div>
                     <div class="weather-details">
-                        <p>High: <span class="font-medium">85°F</span></p>
-                        <p>Low: <span class="font-medium">52°F</span></p>
-                        <p>Humidity: <span class="font-medium">34%</span></p>
-                        <p>Sunrise: <span class="font-medium">7:30 AM</span></p>
-                        <p>Sunset: <span class="font-medium">9:59 PM</span></p>
                     </div>
                 </div>
 
                 <div class="card forecast-card">
                     <h3 class="card-title">Weather Forecast</h3>
                     <div class="forecast-list">
-                        <div class="forecast-item">
-                            <span>Today:</span>
-                            <span class="font-medium">90°F</span>
-                        </div>
-                        <div class="forecast-item">
-                            <span>Wednesday:</span>
-                            <span class="font-medium">89°F</span>
-                        </div>
-                        <div class="forecast-item">
-                            <span>Thursday:</span>
-                            <span class="font-medium">68°F</span>
-                        </div>
+
                     </div>
                 </div>
             </div>
