Add new images for Tecnorancagua and Vinadelsol in WEBP format

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rancagua Chamber of Commerce</title>
 
-    <meta property="og:title" content="Rancagua Chamber of Commerce - Connecting Our Community" />
+    <meta property="og:title" content="Rancagua Chamber of Commerce Directory" />
     <meta property="og:description"
         content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
     <meta property="og:image" content="https://placehold.co/1200x630/764ba2/white?text=Rancagua+Chamber" />
-    <meta property="og:url" content="https://www.yourrancaguaccdomain.com" />
+    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/directory.html" />
     <meta property="og:type" content="website" />
 
     <link rel="stylesheet" href="styles/main.css">
@@ -22,11 +22,7 @@
     <header class="site-header">
         <div class="container header-container">
             <div class="logo-title">
-                <img src="https://placehold.co/50x50/764ba2/white?text=Logo" alt="Rancagua Chamber Logo" class="logo">
-                <div>
-                    <h1 class="site-name">Rancagua</h1>
-                    <p class="site-subtitle">Chamber of Commerce</p>
-                </div>
+                <img src="images/rancaguacoflogo.webp" alt="Rancagua Chamber Logo" class="logo">
             </div>
 
             <nav class="main-nav">
