--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,10 +17,7 @@
     <header class="site-header">
         <div class="container header-container">
             <div class="logo-title">
-                <img src="https://placehold.co/50x50/764ba2/white?text=Logo" alt="Rancagua Chamber Logo" class="logo">
-                <div>
-                    <h1 class="site-name">Rancagua</h1>
-                    <p class="site-subtitle">Chamber of Commerce</p>
+                <img src="images/rancaguacoflogo.webp" alt="Rancagua Chamber Logo" class="logo">
                 </div>
             </div>
 
