Refactor directory and index files: Update member container class names for consistency, enhance button accessibility, and improve CSS styles for grid and list views.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -63,7 +63,7 @@
             <button id="gridViewButton" class="active" aria-label="Grid View">Grid</button>
             <button id="listViewButton" aria-label="List View">List</button>
         </div>
-        <div id="membersContainer" class="grid-view">
+        <div class="members-container grid-view">
         </div>
     </main>
 
