--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,6 @@
         <div class="container header-container">
             <div class="logo-title">
                 <img src="images/rancaguacoflogo.webp" alt="Rancagua Chamber Logo" class="logo">
-                </div>
             </div>
 
             <nav class="main-nav">
@@ -29,15 +28,18 @@
             </nav>
 
             <div class="header-controls">
-                 <button id="darkModeToggle" aria-label="Toggle Dark Mode" class="dark-mode-button">
+                <button id="darkModeToggle" aria-label="Toggle Dark Mode" class="dark-mode-button">
                     <svg class="icon-moon" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="24" height="24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
                     </svg>
                 </button>
                 <button id="mobileMenuButton" class="mobile-menu-trigger" aria-label="Open main menu">
                     <span class="sr-only">Open main menu</span>
-                    <svg class="icon-menu" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true" width="24" height="24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                    <svg class="icon-menu" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true"
+                        width="24" height="24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
                 </button>
             </div>
