Add favicon images in various sizes (16x16, 32x32, and ICO format)

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,16 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rancagua Chamber of Commerce</title>
-
+    <meta property="title" content="Rancagua Chamber of Commerce Directory" />
+    <meta property="description"
+        content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
     <meta property="og:title" content="Rancagua Chamber of Commerce Directory" />
     <meta property="og:description"
         content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
-    <meta property="og:image" content="https://placehold.co/1200x630/764ba2/white?text=Rancagua+Chamber" />
+    <meta property="og:image" content="images/rancaguacoflogo.webp" />
     <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/directory.html" />
     <meta property="og:type" content="website" />
-
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -58,7 +62,7 @@
     </header>
 
     <main class="container main-content">
-        <h2 class="section-title page-title-home">Member Directory</h2>
+        <h1 class="section-title page-title-home">Member Directory</h1>
         <div class="directory-controls">
             <button id="gridViewButton" class="active" aria-label="Grid View">Grid</button>
             <button id="listViewButton" aria-label="List View">List</button>
@@ -72,10 +76,9 @@
             <div class="footer-grid">
                 <div class="footer-contact">
                     <h5 class="footer-heading">Rancagua Chamber of Commerce</h5>
-                    <p>10 Rue De La Paix</p>
-                    <p>Timbuktu, Mali 999</p>
-                    <p class="footer-email">Email: <a href="mailto:info@timbuktucc.org">info@timbuktucc.org</a></p>
-                    <p class="footer-phone">Phone: <a href="tel:+2235552300">(223) 555-2300</a></p>
+                    <p>German Riesco 358, Rancagua</p>
+                    <p class="footer-email">Email: <a href="mailto:info@timbuktucc.org">chamberofcommerce@rancagua.cl</a></p>
+                    <p class="footer-phone">Phone: <a href="tel:+2235552300">72 2 654 325</a></p>
                 </div>
 
                 <div class="footer-social">
@@ -100,7 +103,6 @@
         </div>
     </footer>
 
-    <script src="https://unpkg.com/lucide-react@latest/dist/umd/lucide.min.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/directory.js"></script>
 </body>
