--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,11 +7,14 @@
 
     <meta property="og:title" content="Rancagua Chamber of Commerce - Connecting Our Community" />
     <meta property="og:description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
-    <meta property="og:image" content="https://placehold.co/1200x630/764ba2/white?text=Rancagua+Chamber" /> <meta property="og:url" content="https://www.yourrancaguaccdomain.com" /> <meta property="og:type" content="website" />
-
+    <meta property="og:image" content="https://placehold.co/1200x630/764ba2/white?text=Rancagua+Chamber" /> 
+    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/" /> <meta property="og:type" content="website" />
     <link rel="stylesheet" href="styles/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    </head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+</head>
 <body>
 
     <header class="site-header">
@@ -140,19 +143,18 @@
             <div class="footer-grid">
                 <div class="footer-contact">
                     <h5 class="footer-heading">Rancagua Chamber of Commerce</h5>
-                    <p>10 Rue De La Paix</p>
-                    <p>Timbuktu, Mali 999</p>
-                    <p class="footer-email">Email: <a href="mailto:info@timbuktucc.org">info@timbuktucc.org</a></p>
-                    <p class="footer-phone">Phone: <a href="tel:+2235552300">(223) 555-2300</a></p>
+                    <p>German Riesco 358, Rancagua</p>
+                    <p class="footer-email">Email: <a href="mailto:info@timbuktucc.org">chamberofcommerce@rancagua.cl</a></p>
+                    <p class="footer-phone">Phone: <a href="tel:+2235552300">72 2 654 325</a></p>
                 </div>
 
                 <div class="footer-social">
-                     <a href="#" class="social-link" aria-label="YouTube">
+                    <a href="#" class="social-link" aria-label="YouTube">
                         <i data-lucide="youtube" class="social-icon-svg"></i> </a>
                     <a href="#" class="social-link" aria-label="Twitter">
                         <i data-lucide="twitter" class="social-icon-svg"></i> </a>
                     <a href="#" class="social-link" aria-label="LinkedIn">
-                         <i data-lucide="linkedin" class="social-icon-svg"></i> </a>
+                        <i data-lucide="linkedin" class="social-icon-svg"></i> </a>
                 </div>
 
                 <div class="footer-project-info">
@@ -167,8 +169,6 @@
             </div>
         </div>
     </footer>
-
-    <script src="https://unpkg.com/lucide-react@latest/dist/umd/lucide.min.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 </html>
