Refactor HTML metadata: Update title, description, and Open Graph properties for consistency across directory and index pages.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rancagua Chamber of Commerce</title>
-    <meta property="title" content="Rancagua Chamber of Commerce Directory" />
-    <meta property="description"
-        content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
+    <title>Rancagua Chamber of Commerce Directory</title>
+    <meta name="description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
+    <meta name="author" content="Daniel Toledo Fuentes">
     <meta property="og:title" content="Rancagua Chamber of Commerce Directory" />
     <meta property="og:description"
         content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
