--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rancagua Chamber of Commerce</title>
-
-    <meta property="og:title" content="Rancagua Chamber of Commerce - Connecting Our Community" />
-    <meta property="og:description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
-    <meta property="og:image" content="https://placehold.co/1200x630/764ba2/white?text=Rancagua+Chamber" /> 
-    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/" /> <meta property="og:type" content="website" />
+    <meta name="description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
+    <meta name="author" content="Daniel Toledo Fuentes">
+    <meta property="og:title" content="Rancagua Chamber of Commerce" />
+    <meta property="og:description"
+        content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
+    <meta property="og:image" content="images/rancaguacoflogo.webp" />
+    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/index.html" />
+    <meta property="og:type" content="website" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header class="site-header">
