Refactor Open Graph metadata: Update image URLs for consistency and remove email from footer in directory and index pages.

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,9 +8,8 @@
     <meta name="description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
     <meta name="author" content="Daniel Toledo Fuentes">
     <meta property="og:title" content="Rancagua Chamber of Commerce Directory" />
-    <meta property="og:description"
-        content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
-    <meta property="og:image" content="images/rancaguacoflogo.webp" />
+    <meta property="og:description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
+    <meta property="og:image" content="https://dhkdc.github.io/wdd231/chamber/directory/images/rancaguacoflogo.webp" />
     <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/directory.html" />
     <meta property="og:type" content="website" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -76,7 +75,6 @@
                 <div class="footer-contact">
                     <h5 class="footer-heading">Rancagua Chamber of Commerce</h5>
                     <p>German Riesco 358, Rancagua</p>
-                    <p class="footer-email">Email: <a href="mailto:info@timbuktucc.org">chamberofcommerce@rancagua.cl</a></p>
                     <p class="footer-phone">Phone: <a href="tel:+2235552300">72 2 654 325</a></p>
                 </div>
 
