Refactor code structure for improved readability and maintainability

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,16 +62,16 @@
 
         <section class="hero-section">
             <div class="hero-image-placeholder">
-                <p>Scalable, Responsive Hero Image</p>
+                <img src="images/heroimage.webp" alt="Rancagua Chamber of Commerce" class="hero-image">
             </div>
             <div class="hero-cta">
                 <button class="button button-primary">
-                    Keynote Tickets
+                    Join the Chamber
                 </button>
             </div>
         </section>
 
-        <h2 class="section-title page-title-home">Home</h2>
+        <h1 class="section-title page-title-home">Home</h1>
 
         <section class="content-grid">
             <div class="card events-card">
@@ -89,7 +89,13 @@
                 <div class="card current-weather-card">
                     <h3 class="card-title">Current Weather</h3>
                     <div class="weather-main">
-
+                        <div class="weather-icon-container">
+                            <img id="weather-icon" src="https://openweathermap.org/img/wn/10d@2x.png" alt="Current weather icon">
+                        </div>
+                        <div class="weather-info">
+                            <p class="temperature"><span id="current-temp">25</span>&deg;C</p>
+                            <p class="weather-description" id="weather-desc">Clear Sky</p>
+                        </div>
                     </div>
                     <div class="weather-details">
                     </div>
@@ -107,36 +113,6 @@
         <section class="spotlights-section">
             <h2 class="section-title">Business Spotlights</h2>
             <div class="spotlights-grid">
-                <div class="card business-card">
-                    <img src="https://placehold.co/300x200/a3a3a3/4a4a4a?text=Business+Image" alt="Business 1" class="business-image">
-                    <h4 class="business-name">Desert Delights Bakery</h4>
-                    <p class="business-tagline">"Sweet treats from the heart of the sands."</p>
-                    <div class="business-contact">
-                        <p>EMAIL: <a href="mailto:info@desertdelights.com">info@desertdelights.com</a></p>
-                        <p>PHONE: <a href="tel:800-555-1234">800-555-1234</a></p>
-                        <p>URL: <a href="http://desertdelights.com" target="_blank">desertdelights.com</a></p>
-                    </div>
-                </div>
-                <div class="card business-card">
-                    <img src="https://placehold.co/300x200/a3a3a3/4a4a4a?text=Business+Image" alt="Business 2" class="business-image">
-                    <h4 class="business-name">Oasis Outfitters</h4>
-                    <p class="business-tagline">"Gear up for your Timbuktu adventure."</p>
-                    <div class="business-contact">
-                        <p>EMAIL: <a href="mailto:contact@oasisoutfitters.com">contact@oasisoutfitters.com</a></p>
-                        <p>PHONE: <a href="tel:800-555-5678">800-555-5678</a></p>
-                        <p>URL: <a href="http://oasisoutfitters.com" target="_blank">oasisoutfitters.com</a></p>
-                    </div>
-                </div>
-                <div class="card business-card">
-                    <img src="https://placehold.co/300x200/a3a3a3/4a4a4a?text=Business+Image" alt="Business 3" class="business-image">
-                    <h4 class="business-name">Mali Tech Solutions</h4>
-                    <p class="business-tagline">"Innovative technology for a brighter future."</p>
-                    <div class="business-contact">
-                        <p>EMAIL: <a href="mailto:support@malitech.com">support@malitech.com</a></p>
-                        <p>PHONE: <a href="tel:800-555-9012">800-555-9012</a></p>
-                        <p>URL: <a href="http://malitech.com" target="_blank">malitech.com</a></p>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
