--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,15 +37,12 @@
             <div class="header-controls">
                 <button id="darkModeToggle" aria-label="Toggle Dark Mode" class="dark-mode-button">
                     <i data-lucide="moon" class="icon-moon"></i>
-                    <i data-lucide="sun" class="icon-sun" style="display: none;"></i>
+                    <i data-lucide="sun" class="icon-sun"></i>
                 </button>
-                <button id="mobileMenuButton" class="mobile-menu-trigger" aria-label="Open main menu">
+                <button id="mobileMenuButton" class="mobile-menu-trigger" aria-label="Open main menu" aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
-                    <svg class="icon-menu" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true"
-                        width="24" height="24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                            d="M4 6h16M4 12h16M4 18h16" />
-                    </svg>
+                    <i data-lucide="menu" class="icon-menu"></i>
+                    <i data-lucide="x" class="icon-close"></i>
                 </button>
             </div>
         </div>
