--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
             <nav class="main-nav">
                 <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
-                <a href="#">Join</a>
+                <a href="join.html">Join</a>
                 <a href="#">Discover</a>
             </nav>
 
