--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,19 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rancagua Chamber of Commerce Directory</title>
-    <meta name="description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
+    <title>Rancagua Chamber of Commerce</title>
+    <meta name="description"
+        content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua.">
     <meta name="author" content="Daniel Toledo Fuentes">
-    <meta property="og:title" content="Rancagua Chamber of Commerce Directory" />
-    <meta property="og:description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
-    <meta property="og:image" content="https://dhkdc.github.io/wdd231/chamber/directory/images/rancaguacoflogo.webp" />
-    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/directory.html" />
-    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Rancagua Chamber of Commerce">
+    <meta property="og:description"
+        content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua.">
+    <meta property="og:image" content="https://dhkdc.github.io/wdd231/chamber/directory/images/rancaguacoflogo.webp">
+    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/directory.html">
+    <meta property="og:type" content="website">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 
@@ -38,27 +42,34 @@
             <div class="header-controls">
                 <button id="darkModeToggle" aria-label="Toggle Dark Mode" class="dark-mode-button">
                     <i data-lucide="moon" class="icon-moon"></i>
-                    <i data-lucide="sun" class="icon-sun" style="display: none;"></i>
+                    <i data-lucide="sun" class="icon-sun"></i>
+                </button>
+                <button id="mobileMenuButton" class="mobile-menu-trigger" aria-label="Open main menu"
+                    aria-expanded="false">
+                    <span class="sr-only">Open main menu</span>
+                    <i data-lucide="menu" class="icon-menu"></i>
+                    <i data-lucide="x" class="icon-close"></i>
                 </button>
             </div>
         </div>
         <div id="mobileMenu" class="mobile-nav hidden">
             <a href="index.html">Home</a>
             <a href="directory.html">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
             <a href="#">Discover</a>
         </div>
     </header>
 
     <main class="container main-content">
-        <h1 class="section-title page-title-home">Member Directory</h1>
-        <div class="directory-controls">
-            <button id="gridViewButton" class="active" aria-label="Grid View">Grid</button>
-            <button id="listViewButton" aria-label="List View">List</button>
-        </div>
-        <div class="members-container grid-view">
+        <div class="thank-you-message">
+            <h1>Thank You!</h1>
+            <p>Your application has been submitted. Here is the information you provided:</p>
+            <div id="submission-summary" class="card">
+                
+            </div>
         </div>
     </main>
+
 
     <footer class="site-footer-main">
         <div class="container footer-container-main">
@@ -90,9 +101,39 @@
             </div>
         </div>
     </footer>
-
     <script src="scripts/main.js"></script>
-    <script src="scripts/directory.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const summaryContainer = document.getElementById('submission-summary');
+            let summaryHTML = '<dl class="submission-details">';
+
+            const labels = {
+                firstName: "First Name",
+                lastName: "Last Name",
+                title: "Title",
+                email: "Email",
+                mobile: "Mobile Phone",
+                organization: "Organization",
+                membershipLevel: "Membership Level",
+                description: "Description",
+                timestamp: "Submission Time"
+            };
+
+            for (const [key, value] of urlParams.entries()) {
+                if (value) {
+                    const label = labels[key] || key;
+                    let displayValue = value;
+                    if (key === 'timestamp') {
+                        displayValue = new Date(value).toLocaleString();
+                    }
+                    summaryHTML += `<dt>${label}</dt><dd>${displayValue}</dd>`;
+                }
+            }
+            summaryHTML += '</dl>';
+            summaryContainer.innerHTML = summaryHTML;
+        });
+    </script>
 </body>
 
 </html>
