Refactor: Update Open Graph URLs for consistency across directory, index, join, and thank you pages

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,7 +12,7 @@
     <meta property="og:description"
         content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua.">
     <meta property="og:image" content="https://dhkdc.github.io/wdd231/chamber/directory/images/rancaguacoflogo.webp">
-    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/directory.html">
+    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/">
     <meta property="og:type" content="website">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
@@ -61,6 +61,7 @@
     </header>
 
     <main class="container main-content">
+        <h1 class="section-title page-title-home">Join the Rancagua Chamber of Commerce</h1>
         <div class="join-container">
             <div class="form-section">
                 <h2 class="form-title">Membership Application Form</h2>
