--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Rancagua Chamber of Commerce Directory" />
     <meta property="og:description" content="Join the Rancagua Chamber of Commerce to grow your business, connect with local leaders, and discover opportunities in Rancagua." />
     <meta property="og:image" content="https://dhkdc.github.io/wdd231/chamber/directory/images/rancaguacoflogo.webp" />
-    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/directory.html" />
+    <meta property="og:url" content="https://dhkdc.github.io/wdd231/chamber/" />
     <meta property="og:type" content="website" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
