Add initial site plan and styles for Bookmarked website
- Created site plan in HTML format detailing site name, purpose, scenarios, color schema, typography, and wireframe.
- Added CSS styles for the site, including variables for color scheme, typography settings, and responsive design adjustments.
- Included mobile and desktop wireframes as images in the project.

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <ul>
                     <li><a href="#" class="nav-item active-link">Home</a></li>
                     <li><a href="chamber" class="nav-item">Chamber</a></li>
-                    <li><a href="#" class="nav-item">Final</a></li>
-                    <li><a href="#" class="nav-item">Github Profile</a></li>
-                    <li><a href="#" class="nav-item">LinkedIn</a></li>
+                    <li><a href="final" class="nav-item">Final</a></li>
+                    <li><a href="https://github.com/DhKDc/wdd231" class="nav-item">Github Profile</a></li>
+                    <li><a href="https://www.linkedin.com/in/danieltoledofuentes/" class="nav-item">LinkedIn</a></li>
                 </ul>
             </nav>
         </div>
