--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -16,6 +16,7 @@
     <meta property="og:type" content="website">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/thankyou.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -36,7 +37,7 @@
                 <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
             </nav>
 
             <div class="header-controls">
@@ -56,7 +57,7 @@
             <a href="index.html">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Discover</a>
+            <a href="discover.html">Discover</a>
         </div>
     </header>
 
@@ -102,38 +103,7 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const urlParams = new URLSearchParams(window.location.search);
-            const summaryContainer = document.getElementById('submission-summary');
-            let summaryHTML = '<dl class="submission-details">';
-
-            const labels = {
-                firstName: "First Name",
-                lastName: "Last Name",
-                title: "Title",
-                email: "Email",
-                mobile: "Mobile Phone",
-                organization: "Organization",
-                membershipLevel: "Membership Level",
-                description: "Description",
-                timestamp: "Submission Time"
-            };
-
-            for (const [key, value] of urlParams.entries()) {
-                if (value) {
-                    const label = labels[key] || key;
-                    let displayValue = value;
-                    if (key === 'timestamp') {
-                        displayValue = new Date(value).toLocaleString();
-                    }
-                    summaryHTML += `<dt>${label}</dt><dd>${displayValue}</dd>`;
-                }
-            }
-            summaryHTML += '</dl>';
-            summaryContainer.innerHTML = summaryHTML;
-        });
-    </script>
+    <script src="scripts/thankyou.js"></script>
 </body>
 
 </html>
