--- a/chamber/index.html
+++ b/chamber/index.html
@@ -13,6 +13,7 @@
     <meta property="og:type" content="website" />
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
@@ -31,7 +32,7 @@
                 <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
             </nav>
 
             <div class="header-controls">
@@ -49,8 +50,8 @@
         <div id="mobileMenu" class="mobile-nav hidden">
             <a href="index.html">Home</a>
             <a href="directory.html">Directory</a>
-            <a href="#">Join</a>
-            <a href="#">Discover</a>
+            <a href="join.html">Join</a>
+            <a href="discover.html">Discover</a>
         </div>
     </header>
 
@@ -144,5 +145,6 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
+    <script src="scripts/index.js"></script>
 </body>
 </html>
