--- a/chamber/join.html
+++ b/chamber/join.html
@@ -16,6 +16,7 @@
     <meta property="og:type" content="website">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/join.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -36,7 +37,7 @@
                 <a href="index.html">Home</a>
                 <a href="directory.html">Directory</a>
                 <a href="join.html">Join</a>
-                <a href="#">Discover</a>
+                <a href="discover.html">Discover</a>
             </nav>
 
             <div class="header-controls">
@@ -56,7 +57,7 @@
             <a href="index.html">Home</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Discover</a>
+            <a href="discover.html">Discover</a>
         </div>
     </header>
 
@@ -215,6 +216,7 @@
         </div>
     </footer>
     <script src="scripts/main.js"></script>
+    <script src="scripts/join.js"></script>
 </body>
 
 </html>
